# Universal_RAG_App_by_VG

./: .gitignore  README.md  USER_GUIDE.md  config.py  main.py  pyproject.toml  requirements.txt  setup.py
chroma_db/: .gitkeep
data/: Top500_Indian_Cities.xlsx
src/: document_processor.py  rag_system_unified.py  utils.py  vector_store_unified.py
