[project]
name = "universal-rag"
version = "0.1.0"
description = "Universal RAG application with ChromaDB and Ollama"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.28.0",
    "chromadb>=0.4.0",
    "ollama>=0.2.0",
    "PyPDF2>=3.0.0",
    "python-docx>=0.8.11",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "requests>=2.31.0",
    "streamlit-chat>=0.1.1"
]
